# faststack

./: .gitattributes  .gitignore  ChangeLog.md  MANIFEST.in  README.md  SECURITY.md  WARP.md  build-release.sh  debug_al.py  inspect_app.py  next.prompt  prompt.md  pyproject.toml  pytest.ini  repro_crash.py  reproduce_bug.py  reproduce_bug_case.py  reproduce_config_issue.py  reproduce_issue.py  reproduce_mmap_error.py  requirements.txt  run-faststack.cmd  run-faststack.sh  run_app.py  test_cachetools_api.py  test_max_bytes.py  test_output.txt  verify_fix.py  verify_fix_auto_levels.py  verify_fix_simple.py  z
faststack/: ChangeLog.md  README.md  __main__.py  app.py  check_scipy.py  config.py  deletion_types.py  error_log.txt  final_all_fail.txt  logging_setup.py  loupe_fail.txt  models.py  pyproject.toml  recylebin.txt  repro.py  repro_type_error.py  reproduction_output.txt  requirements.txt  resources.py  test.py  test_fail_out.txt  test_final_fail.txt  test_loupe_out.txt  test_output.txt  test_pil_blur.py  test_result.txt  test_result_utf8.txt  test_results_debug.txt  test_results_debug_2.txt  test_results_debug_3.txt  test_results_refinement_1.txt  test_results_refinement_2.txt  test_results_refinement_3.txt  test_unif_out.txt  updater.py  verify_wb.py  z.patch
faststack/faststack/: .app.py.swp  AGENTS.md  a2  app.py  app.py.bak  config.py  debug_output.txt  faststack.json  logging_setup.py  models.py  next.prompt  read_req.py  verify_wb.py
faststack/faststack.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
faststack/imaging/: cache.py  editor.py  jpeg.py  mask.py  mask_engine.py  masked_ops.py  math_utils.py  metadata.py  orientation.py  prefetch.py  turbo.py
faststack/io/: deletion.py  (+6 more)
(+860 files in other folders)
